Fix internationalization bug
Listen for NSCurrentLocalChanged notification and replace text

--- a/ImageSearch/ImageSearch/fr.lproj/Localizable.strings
+++ b/ImageSearch/ImageSearch/fr.lproj/Localizable.strings
@@ -7,4 +7,4 @@
 */
 "SearchHistoryText" = "Votre historique de recherche";
 "EndOfResultsText" = "Fin des résultats!";
-"SearchBarPlaceholder" = "Google Image Search";
+"SearchBarPlaceholder" = "Google image Recherche";
